fixed gap between the message, removed all console logs

--- a/october-2024/14.10.2024/sukot-assigment/styles/movie-data.css
+++ b/october-2024/14.10.2024/sukot-assigment/styles/movie-data.css
@@ -26,6 +26,7 @@
   font-family: "Bebas Neue";
   color: white;
   cursor: pointer;
+  margin-top: 1em;
 }
 
 .hover-element {
